bdr.BDR.scala.error
Compilation error:
BDR:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var x:Char
    ^BDR:2: error: local variables must be initialized
var x:Char
    ^BDR:5: error: not found: value getIndication
  x=getIndication();
    ^