bdr.BDR.scala.code
var dancing=true
var x:Char

while(dancing==true){
  x=getIndication();
  
  if(x=="R"){
    droite();
    avance();
  }
  else if(x=="L"){
    gauche();
    avance();
  }
  else if(x=="I"){
    droite();
    droite();
    avance();
  }
  else if(x=="A"){
    avance();
  }
  else if(x=="B"){
    avance();
    avance();
  }
  else if(x=="C"){
    avance();
    avance();
    avance();
  }
  else if(x=="Z"){
    recule();
  }
  else if(x=="Y"){
    recule();
    recule();
  }
  else if(x=="X"){
    recule();
    recule();
    recule();
  }
  else{
    dancing=false
  }
  
}